learning_basilisk/couette_example/Anish_Gupta_Code/agupta.log~
In file included from /usr/include/stdint.h:25:0,
                 from /usr/lib/gcc/x86_64-redhat-linux/4.8.5/include/stdint.h:9,
                 from agupta-cpp.c:6:
/usr/include/features.h:330:4: warning: #warning _FORTIFY_SOURCE requires compiling with optimization (-O) [-Wcpp]
 #  warning _FORTIFY_SOURCE requires compiling with optimization (-O)
    ^
agupta.c: In function ‘profiles’:
agupta.c:113:14: warning: character constant too long for its type [enabled by default]
   fp = fopen('heights', "a");
              ^
agupta.c:113:3: warning: passing argument 1 of ‘fopen’ makes pointer from integer without a cast [enabled by default]
   fp = fopen('heights', "a");
   ^
In file included from /gpfs/runtime/opt/basilisk/1.0/src/common.h:2:0:
/usr/include/stdio.h:272:14: note: expected ‘const char * restrict’ but argument is of type ‘int’
 extern FILE *fopen (const char *__restrict __filename,
              ^
agupta.c:114:3: error: incompatible type for argument 1 of ‘statsf’
   fprintf(fp, "%g %g\n", t, statsf(h).max);
   ^
/gpfs/runtime/opt/basilisk/1.0/src/utils.h:160:7: note: expected ‘scalar’ but argument is of type ‘vector’
 stats statsf (scalar f)
       ^
